--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,11 @@
 :root {
-    --purple: rgb(99,102,106);
-    --white: rgb(213, 197, 216);
+    --red: rgb(106, 99, 99);
+    --blue: rgb(54, 52, 54);
   }
 
 body {
     margin: 0px;
-    background-color: var(--gray);
+    background-color: var(--red);
 }
 
 h1, h2, h3, h4, h6 {
@@ -17,12 +17,12 @@ nav {
     flex-direction: column;
     align-items: flex-start;
     margin: 0;
-    background-color: var(--gray);
+    background-color: var(--white);
 }
 
 h1 {
     color: var(--black);
-    background-color: var(--gray);
+    background-color: var(--white);
     margin-bottom: 50px ;
     margin-left: 60px ;
     padding: 5px;
@@ -39,7 +39,7 @@ ul {
 li {
     margin: 25px ;
     text-decoration: underline;
-    color: var(--black);
+    color: var(--white);
     font-size: larger;
 }
 
@@ -51,7 +51,7 @@ main {
 }
 
 .dashUser {
-    color: var(--black);
+    color: var(--white);
     margin-top: 15px;
 }
 
@@ -60,9 +60,9 @@ main {
     margin-top: 30px;
     margin-bottom: 30px;
     border: solid;
-    border-width: 2px;
+    border-width: 20px;
     border-color: var(--black);
-    color: var(--black);
+    color: var(--white);
 }
 
 
@@ -72,7 +72,7 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--gray);
+    background-color: var(--white);
     color: var(--black);
     width: 700px;
 }
@@ -95,7 +95,7 @@ a {
 
 #loginSignup {
 
-    background-color: var(--gray);
+    background-color: var(--blue);
     border-radius: 10px;
     height: 400px;
     width: 750px ;
@@ -108,7 +108,7 @@ a {
 
 .loginSignup {
     width: 250px;
-    background-color: var(--purple);
+    background-color: var(--white);
     height: 275px;
     display: flex;
     flex-direction: column ;
@@ -118,7 +118,7 @@ a {
 
 .vertical-line1 {
     width: 1px;
-    background-color: var(--purple);
+    background-color: var(--black);
     height: 275px;
 }
 
