--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -30,4 +30,4 @@
 
 <button id="newBlogPostBtn">New Blog Post</button>
 
-<script src="/js/dashboard.js"></script>
+<script src="public/js/dashbord.js"></script>
