--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -23,4 +23,4 @@
         <button type="submit" id="signupBtn"><h2>Submit</h2></button><br>
     </div>
 </section>
-<script src="/js/login.js"></script>
+<script src="public/js/login.js"></script>
