--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Time for Tech</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
 
 
 {{#if logged_in}}
-<script src="/js/logout.js"></script>
+<script src="public/js/logout.js"></script>
 {{/if}}
 
 </body>
